# agentic-ai

./: .env  .gitignore  Dockerfile  Makefile  README.md  Untitled.ipynb  Untitled1.ipynb  docker-compose.yml  download_nlpbert.py  langgraph.json  notebook.ipynb  play.py  pyproject.toml  req.txt  temp.py  test.py  ui.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
requirements/: requirements-dev.txt  requirements.in  requirements.txt
sandbox/: play.py  temp.py  ui.py
src/profile_agent/: agent.py  ingest.py  main.py  ui.py
src/research_tool_rag/configs/: __init__.py  config_class.py  defaults.py  offline.py  online.py
src/research_tool_rag/db_store/: qdrant.py
src/research_tool_rag/llm.py/: ollama.py
src/research_tool_rag/preprocessing/: hierarchy.py
src/research_tool_rag/rag/: agent.py  ingest_data.py  main.py  model.py  pipeline.py  qdrant.py  query.py  run.py
src/research_tool_rag/state/: __init__.py  state_schema.py
src/research_tool_rag/utils/: utils.py
